# parsely-test

./: .gitignore  CLAUDE.md
api-py/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api-py/alembic/: env.py  script.py.mako
api-py/alembic/versions/: 854dd171a78a_initial_schema.py
api-py/app/: config.py  db.py  deps.py  domain.py  main.py  security.py
api-py/app/aggregations/: compute.py  config.py  evaluator.py  operations.py  parser.py
api-py/app/catalog/: document_types.py
api-py/app/geometry/: polygon.py
api-py/app/models/: __init__.py  document.py  field.py  table.py  template.py
api-py/app/routers/: aggregations.py  document_types.py  documents.py  templates.py
api-py/app/schemas/: aggregation.py  base.py  bounding.py  document.py  document_types.py  field.py  template.py
api-py/app/services/: azure_field_mapping.py  blob_storage.py  document_intelligence.py  layout_storage.py  table_synthesizer.py
api-py/charts/parsely-api/: .helmignore  Chart.yaml  values.yaml
api-py/charts/parsely-api/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
api-py/k8s/: configmap.yaml  create-keycloak-secrets.ps1  create-secret.ps1  deployment.yaml  keycloak-values.yaml  namespace.yaml  refresh-ecr-secret.ps1  run.txt  service.yaml  values-ecr.yaml
api-py/k8s/notes/: notes.md
context/: FASTAPI_PORT.md  PHASE_2_3_DEEP_DIVE.md  PRACTICE_PROJECT.md
infra/: .terraform.lock.hcl  aws.tf  keycloak.tf  neon.tf  providers.tf  variables.tf
web/: auth.ts  package.json  pnpm-lock.yaml
(+3 files in other folders)
