[project]
name = "parsely-api"
version = "0.1.0"
description = "Document parsing service backend — FastAPI port of the .NET API for tech-stack practice."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-storage-blob>=12.24",
]

[tool.uv]
package = false
